<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/albumFragment2">
    <fragment
        android:id="@+id/albumFragment2"
        android:name="com.example.vinilos.views.AlbumFragment"
        android:label="@string/album_list_title"
        tools:layout="@layout/album_fragment">
        <action
            android:id="@+id/action_albumFragment2_to_albumDetailsFragment2"
            app:destination="@id/albumDetailsFragment2" />
        <action
            android:id="@+id/action_albumFragment2_to_errorMessageFragment"
            app:destination="@id/errorMessageFragment" />
    </fragment>
    <fragment
        android:id="@+id/albumDetailsFragment2"
        android:name="com.example.vinilos.views.AlbumDetailsFragment"
        android:label="@string/album_details_title">
        <argument
            android:name="myArg"
            app:argType="com.example.vinilos.models.Album" />
        <action
            android:id="@+id/action_albumDetailsFragment2_to_errorMessageFragment"
            app:destination="@id/errorMessageFragment" />
    </fragment>
    <fragment
        android:id="@+id/errorMessageFragment"
        android:name="com.example.vinilos.views.ErrorMessageFragment"
        android:label="@string/error_message_title"
        tools:layout="@layout/error_message_fragment" >
        <action
            android:id="@+id/action_errorMessageFragment_to_albumFragment2"
            app:destination="@id/albumFragment2" />
    </fragment>
    <fragment
        android:id="@+id/collectorsListFragment"
        android:name="com.example.vinilos.views.CollectorsListFragment"
        android:label="collectors_list_fragment"
        tools:layout="@layout/collectors_list_fragment" >
        <action
            android:id="@+id/action_collectorsListFragment_to_errorMessageFragment"
            app:destination="@id/errorMessageFragment" />
    </fragment>
</navigation>